--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.21.0",
     "@reduxjs/toolkit": "^2.5.0",
-    "bootstrap": "^4.1.3",
+    "axios": "^1.9.0",
+    "bootstrap": "^4.6.2",
     "cra-template": "1.2.0",
+    "firebase": "^11.6.0",
     "jquery": "^3.7.1",
     "jquery-ui-dist": "^1.13.3",
+    "popper.js": "^1.16.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.56.1",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1"
